feat: Added support for DDP as a sharding technology based on FDW